--- a/BTSolution/BTSolution.csproj
+++ b/BTSolution/BTSolution.csproj
@@ -18,9 +18,12 @@
       <PrivateAssets>all</PrivateAssets>
       <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
     </PackageReference>
+    <PackageReference Include="Microsoft.VisualStudio.Web.CodeGeneration.Design" Version="6.0.4" />
+    <PackageReference Include="Swashbuckle.AspNetCore" Version="6.3.0" />
   </ItemGroup>
 
   <ItemGroup>
+    <ProjectReference Include="..\BTSolution.BL\BTSolution.BL.csproj" />
     <ProjectReference Include="..\BTSolution.DAL\BTSolution.DAL.csproj" />
   </ItemGroup>
 
